[gd_scene load_steps=2 format=3 uid="uid://bjc4pkjic60w8"]

[ext_resource type="Script" uid="uid://qj33tf6pdyaq" path="res://PauseMenu.gd" id="1_nov15"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_nov15")

[node name="MenuBox" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1194.0
offset_bottom = 661.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBox"]
layout_mode = 0
offset_left = 152.0
offset_top = 333.0
offset_right = 1050.0
offset_bottom = 476.0

[node name="QuitButton" type="Button" parent="MenuBox/VBoxContainer"]
layout_mode = 2
text = "Quitter le jeu
"

[node name="MainMenuButton" type="Button" parent="MenuBox/VBoxContainer"]
layout_mode = 2
text = "Menu Principal
"

[node name="ResumeButton" type="Button" parent="MenuBox/VBoxContainer"]
layout_mode = 2
text = "Reprendre"

[connection signal="pressed" from="MenuBox/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MenuBox/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MenuBox/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
